function that returns a function

--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -6,13 +6,15 @@
   - [3.1. Mediante una expresión](#31-mediante-una-expresión)
   - [3.2. A través de una variable asociada](#32-a-través-de-una-variable-asociada)
   - [3.3. En un callback](#33-en-un-callback)
-- [4. Parámetros y argumentos](#4-parámetros-y-argumentos)
-  - [4.1. Paso por valor y Paso por referencia](#41-paso-por-valor-y-paso-por-referencia)
-- [5. Ejecución asíncrona](#5-ejecución-asíncrona)
-  - [5.1. Callbacks](#51-callbacks)
-  - [5.2. Promesas](#52-promesas)
-  - [5.3. async / await](#53-async--await)
-- [6. Referencias](#6-referencias)
+- [4. Valor devuelto o valor de retorno](#4-valor-devuelto-o-valor-de-retorno)
+- [5. Parámetros y argumentos](#5-parámetros-y-argumentos)
+  - [5.1. Paso por valor y Paso por referencia](#51-paso-por-valor-y-paso-por-referencia)
+- [6. Ejecución asíncrona](#6-ejecución-asíncrona)
+  - [6.1. Callbacks](#61-callbacks)
+  - [6.2. Promesas](#62-promesas)
+  - [6.3. async / await](#63-async--await)
+- [7. Referencias](#7-referencias)
+
 
 ---
 
@@ -61,7 +63,7 @@ function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??
 ## 3.2. A través de una variable asociada
 
 ```javascript
-let suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
+const suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
 
 suma (2, 3);                                   // ahora sí puedo invocar la función a través de la variable asociada
 ```
@@ -123,8 +125,64 @@ setTimeout ( suma    // función a ejecutar
            ) ;  
 ```
 
+# 4. Valor devuelto o valor de retorno
 
-# 4. Parámetros y argumentos
+Una función de Javascript puede devolver:
+
+- Nada
+- Un valor de cualquier tipo (simple o compuesto)
+- Una función
+
+A continuación se muestra un ejemplo de cada caso.
+
+**No devuelve ningún valor**
+
+```js
+function sumar (a,b) {
+  console.log(`La suma de ${a} y ${b} es ${a+b}`)
+}
+
+sumar(3,5)   // La suma de 3 y 5 es 8
+```
+
+**Devuelve un valor**
+
+```js
+function sumar (a,b) {
+  return a+b
+}
+
+sumar(3,5)   // 8
+```
+
+
+**Devuelve una función**
+
+```js
+function calcular( operacion ) {
+  switch (operacion) {
+    case 'suma': return (a,b) => a + b; break;
+    case 'resta': return (a,b) => a - b; break;
+    case 'multiplicacion': return (a,b) => a*b; break;
+    case 'division': return (a,b) => a/b; break;
+    default: return () => {}
+  }
+}
+
+
+const sumar = calcular('suma')
+const restar = calcular('resta')
+sumar(3, 5)               // 8
+restar(3, 5)              // -2
+
+
+// También podemos ejecutar
+calcular('suma')(3,5)     // 8
+calcular('resta')(3,5)    // -2
+```
+
+
+# 5. Parámetros y argumentos
 
 ```js
 // Parámetros: a, b
@@ -186,7 +244,7 @@ suma ('Esto ', 'es ', 'una ', 'prueba.');  // Devuelve '0Esto es una prueba.'
 
 
 
-## 4.1. Paso por valor y Paso por referencia
+## 5.1. Paso por valor y Paso por referencia
 
 Los argumentos de una función pueden pasarse de dos maneras:
 
@@ -226,7 +284,7 @@ f2 ( b )  // [ 2, 2 ]
 b         // [ 2, 2 ]  // Se modifica el valor de la variable original
 ```
 
-# 5. Ejecución asíncrona
+# 6. Ejecución asíncrona
 
 Utilizada frecuentemente en operaciones de Entrada/Salida:
 
@@ -246,7 +304,7 @@ Existen 3 formas de ejecutar código de forma asíncrona.
 - Promesas
 - async / await
 
-## 5.1. Callbacks
+## 6.1. Callbacks
 
 Es la forma clásica, todavía ampliamente usada.
 
@@ -350,7 +408,7 @@ setTimeout(function () { console.log('Este es el cuarto mensaje') },  800);
 ```
 
 
-## 5.2. Promesas
+## 6.2. Promesas
 
 Disponible a partir de ES6 (2015). La estructura del código es más clara que el uso de callbacks.
 
@@ -499,7 +557,7 @@ fetch(URL)
 ```
 
 
-## 5.3. async / await
+## 6.3. async / await
 
 Disponible a partir de ES7 (2016).
 
@@ -636,7 +694,7 @@ async function mensajes () {
 mensajes()
 ```
 
-# 6. Referencias
+# 7. Referencias
 
 - https://carlosazaustre.es/manejando-la-asincronia-en-javascript/?utm_campaign=Revue%20newsletter&utm_medium=Newsletter&utm_source=Carlos%20Azaustre
 - https://medium.com/front-end-hacking/callbacks-promises-and-async-await-ad4756e01d90
