--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -161,10 +161,10 @@ sumar(3,5)   // 8
 ```js
 function calcular( operacion ) {
   switch (operacion) {
-    case 'suma': return (a,b) => a + b; break;
-    case 'resta': return (a,b) => a - b; break;
-    case 'multiplicacion': return (a,b) => a*b; break;
-    case 'division': return (a,b) => a/b; break;
+    case 'suma': return (a,b) => a + b; 
+    case 'resta': return (a,b) => a - b; 
+    case 'multiplicacion': return (a,b) => a*b; 
+    case 'division': return (a,b) => a/b; 
     default: return () => {}
   }
 }
